great-idea/css/index.css
/* http://meyerweb.com/eric/tools/css/reset/
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/* Set every element's box-sizing to border-box */
* {
    box-sizing: border-box;
}

html, body {
    height: 100%;
    font-family: 'Titillium Web', sans-serif;
}

h1, h2, h3, h4, h5 {
    font-family: 'Bangers', cursive;
    letter-spacing: 1px;
    margin-bottom: 15px;
}

/* Copy and paste your work from yesterday here and start to refactor into flexbox */

body {
	width: 880px;
	margin: 0 auto;
}

header {
	width: 880px;
}

nav {
	display: flex;
	width: 600px;
	margin-top: 40px;
	vertical-align: top;
	flex-direction: row;
	justify-content: space-between;
}

header a {
	/* width: 16.2%; */
	color: lightgray;
	text-decoration: none;
}

img {

}

h2 {
	font-size: 150%;
}

h3 {
	text-align: left;
}

p {
	text-align: left;
}

h6 {
	text-align: center;
	font-size: 90%;
	margin-top: 60px;
}

.top-bar {
	display: flex;
	justify-content: space-between;
}

.logo {
	margin: 30px 0;
}

.home h1 {
	display: flex;
	font-size: 75px;
	text-align: center;
	margin-right: 30px;
	flex-direction: column;
	align-self: center;
}

.home button {
	background-color: white;
	border: 1px solid black;
	font-family: 'Titillium Web', sans-serif;
	font-size: 25%;
	margin: 20px 70px -20px 70px;
}

.home .below-bar {
	display: flex;
	justify-content: flex-end;
	align-items: center;
}

.home .header-img {
	margin: 30px 0 30px 60px;
}

.home .top-content {
	display: flex;
	width: 900px;
}

.home .top-content div {
	border-right: 20px solid transparent;
}

.home .middle-img {
	margin: 30px 0;
}

.home .bot-content {
	display: flex;
	width: 900px;
	justify-content: space-between;
}

.home .bot-content div {
	border-right: 20px solid transparent;
}

.home footer {
	text-align: center;
	line-height: 1.1;
}

.home address {
	text-align: left;
}

.services-header-img {
	margin: -15px auto;
}

.services h2 {
	margin-top: 45px;
}

.services .content {
	width: 900px;
	display: flex;
	flex-wrap: wrap;
	justify-content: space-between;
}

.services .content .box {
	flex-basis: 47%;
	border: 1px solid black;
	padding: 25px;
	/* padding-right: 30px; */
	margin-right: 20px;
	margin-bottom: 32px;
	background-color: #F3F3F3;
}

.services .content .box p {
  line-height: 1.3;
}

.services button {
	border: 1px solid black;
	border-radius: 4px;
	background-color: white;
	font-size: 80%;
	padding: 10px 41px;
	margin: 15px 0;
}

.services .thicc-border {
	width: 98%;
	border: 1px solid black;
	margin-bottom: 30px;
}

.services .subfoot {
	display: flex;
	width: 880px;
	justify-content: space-between;
}

.services .content .facts {
	display: flex;
	flex-basis: 47%;
	flex-flow: column;
}

.services .content .facts p {
	margin-bottom: 20px;
}

.services ul {
	line-height: 2;
	list-style: disc inside;
}

.services-info-img {
  flex-basis: 48.7%;
}

